# ceres

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  rustfmt.toml
ceres-binaries/: Cargo.toml
ceres-core/: Cargo.toml
ceres-core/src/: compiler.rs  config.rs  context.rs  error.rs  evloop.rs  legacy.rs  lib.rs  processor.rs  util.rs
ceres-core/src/lua/: compiler.rs  fs.rs  launcher.rs  macros.rs  map.rs  mod.rs  mpq.rs  object.rs  util.rs
ceres-core/src/resource/: blank.w3x  buildscript_default.lua  buildscript_lib.lua  ceres_buildscript_default.lua  ceres_buildscript_lib.lua  ceres_header.lua  ceres_post.lua  map_footer.lua  map_header.lua
ceres-data/: Cargo.toml  build.rs
ceres-data/data/ui/: aieditordata.txt  miscdata.txt  skinmetadata.slk  triggerdata.txt  uniteditordata.txt  worldeditdata.txt  worldeditlayout.txt  worldeditlicense.en.txt
ceres-data/data/units/: abilitybuffdata.slk  abilitydata.slk  abilitymetadata.slk  destructablemetadata.slk  humanabilityfunc.txt  humanunitfunc.txt  humanupgradefunc.txt  itemabilityfunc.txt  itemdata.slk  itemfunc.txt  miscmetadata.slk  neutralabilityfunc.txt  nightelfabilityfunc.txt  nightelfunitfunc.txt  nightelfupgradefunc.txt  orcabilityfunc.txt  orcunitfunc.txt  orcupgradefunc.txt  undeadabilityfunc.txt  undeadunitfunc.txt  undeadupgradefunc.txt  unitabilities.slk  unitdata.slk  unitmetadata.slk  unitui.slk  unitweapons.slk  upgradedata.slk  upgradeeffectmetadata.slk
ceres-data/data/units_en/: campaignabilitystrings.txt  campaignunitstrings.txt  commandstrings.txt  commonabilitystrings.txt  humanabilitystrings.txt  humanunitstrings.txt  humanupgradestrings.txt  itemabilitystrings.txt  itemstrings.txt  neutralabilitystrings.txt  neutralunitstrings.txt  nightelfabilitystrings.txt  nightelfunitstrings.txt  nightelfupgradestrings.txt  orcabilitystrings.txt  orcunitstrings.txt  orcupgradestrings.txt  undeadabilitystrings.txt  undeadunitstrings.txt  undeadupgradestrings.txt  unitglobalstrings.txt
ceres-data/src/: lib.rs
ceres-formats/: Cargo.toml
ceres-formats/src/: error.rs  lib.rs  metadata.rs  object.rs  objectstore.rs  test.rs  uncase.rs
ceres-formats/src/parser/: crlf.rs  profile.rs  slk.rs  w3obj.rs
ceres-mpq/: Cargo.toml
ceres-mpq/src/: lib.rs  test.rs  test.w3m
ceres-parsers/: Cargo.toml
ceres-parsers/src/: lib.rs  lua.pest  lua.rs  preprocessor.pest  preprocessor.rs
ceres-parsers/src/test-cases/: all.lua  db.lua  files.lua  main.lua  pm.lua  simple.lua  sort.lua  strings.lua
ceres-utils/: Cargo.toml  test.w3x
ci/: before_deploy.ps1  before_deploy.sh  script.sh
docs/: compiletime.md  lua-guidelines.md  manual.md  setup.md
storm-sys/: Cargo.toml  build.rs
storm-sys/StormLib/src/: FileStream.cpp  StormPort.h  wrapper.h
storm-sys/src/: lib.rs  storm.rs
