[package]
name = "ceres-binaries"
version = "0.1.0-INTERNAL"
authors = ["mori"]
edition = "2018"

[dependencies]
ceres-parsers = {path = "../ceres-parsers"}
ceres-formats = {path = "../ceres-formats"}
ceres-core = {path = "../ceres-core"}

serde = "1.0.103"
pest = "2.1.2"
rlua = "0.16.3"
ron = "0.5.1"
bincode = "1.2.1"
anyhow = "1.0.25"
dotenv = "0.15.0"

[dependencies.clap]
version = "2.33.0"
default-features = false
