[package]
name = "ceres-core"
version = "0.1.2"
authors = ["mori"]
edition = "2018"

[dependencies]
pest = "2.1.1"
rlua = "0.16.3"
matches = "0.1.8"
serde = { version = "1.0.94", features = ["derive"] }
toml = "0.5.1"
indexmap = "1.0.2"
unindent = "0.1.3"
err-derive = "0.1.5"
walkdir = "2.2.8"
itertools = "0.8.0"
path-absolutize = "1.1.5"

#ceres-mpq = {path = "../ceres-mpq"}
ceres-parsers = {path = "../ceres-parsers"}
