[package]
name = "ceres-core"
version = "0.1.0-INTERNAL"
authors = ["mori"]
edition = "2018"

[dependencies]
pest = "2.1.2"
rlua = "0.16.3"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
rlua_serde = "0.3.1"
toml = "0.5.5"
indexmap = "1.3.0"
err-derive = "0.2.1"
walkdir = "2.2.9"
itertools = "0.8.2"
path-absolutize = "1.1.7"
atoi = "0.3.2"

# error handling
thiserror = "1.0.9"
anyhow = "1.0.26"

# internal
ceres-mpq = "0.1.4"
ceres-formats = {path = "../ceres-formats"}
ceres-parsers = {path = "../ceres-parsers"}
ceres-data = {path = "../ceres-data"}
