[package]
name = "ceres-core"
version = "0.1.0-INTERNAL"
authors = ["mori"]
edition = "2018"

[dependencies]
pest = "2.1.2"
rlua = "0.16.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
toml = "0.5.6"
indexmap = "1.3.2"
walkdir = "2.3.1"
itertools = "0.8.2"
path-absolutize = "1.1.7"
atoi = "0.3.2"
notify = "4.0.15"

# error handling
thiserror = "1.0.11"
anyhow = "1.0.26"

# internal
ceres-mpq = "0.1.8"
ceres-formats = {path = "../ceres-formats"}
ceres-parsers = {path = "../ceres-parsers"}
ceres-data = {path = "../ceres-data"}
