[package]
name = "ceres-formats"
version = "0.1.0-INTERNAL"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
lazy_static = "1.4.0"
thiserror = "1.0.9"
byte-slice-cast = "0.3.4"
indexmap = "1.3.0"
atoi = "0.3.2"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
bincode = "1.2.1"
slotmap = { version = "0.4.0", features = ["unstable", "serde"] }
num-traits = "0.2.10"
bitflags = "1.2.1"
ron = "0.5.1"
unicase = "2.6.0"
unicase_serde = "0.1.0"
