[package]
name = "ceres-formats"
version = "0.1.0-INTERNAL"
edition = "2018"

[dependencies]

# util
lazy_static = "1.4.0"
atoi = "0.3.2"
indexmap = "1.3.2"
slotmap = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.11"
bitflags = "1.2.1"

# parsing/casting
byteorder = "1.3.4"
byte-slice-cast = "0.3.5"
serde = { version = "1.0.104", features = ["derive", "rc"] }

# lua
rlua = "0.16.3"

# error handling
thiserror = "1.0.11"
anyhow = "1.0.26"
