[package]
name = "utils"
version = "0.1.0"
authors = ["mori"]
edition = "2018"

[dependencies]
#ceres-mpq = {path = "../ceres-mpq"}
ceres-parsers = {path = "../ceres-parsers"}
ceres-core = {path = "../ceres-core"}

clap = "2.33"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"
pest = "2.1"
rlua = "0.16"
failure = "0.1"