[package]
name = "utils"
version = "0.1.2"
authors = ["mori"]
edition = "2018"

[dependencies]
#ceres-mpq = {path = "../ceres-mpq"}
ceres-parsers = {path = "../ceres-parsers"}
ceres-core = {path = "../ceres-core"}

log = "0.4"
chrono = "0.4"
pest = "2.1"
rlua = "0.16"
failure = "0.1"

[dependencies.clap]
version = "2.33"
default-features = false